[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day-1"
[[bin]]
name = "day-2"
[[bin]]
name = "day-3"
[[bin]]
name = "day-4"

[lib]
name = "advent"
path = "src/lib.rs"

[dependencies]
lazy_static = "1.4.0"
regex = "1.7.0"
